--- a/index.css
+++ b/index.css
@@ -12,6 +12,12 @@
     width: 33.3%;
     padding: 10px;
     height: 300px;
+    @media screen and (max-width: 600px) {
+        width: 100%;
+    };
+    @media screen and (max-width: 900px) {
+        width: 50%;
+    }
 }
 
 .item:nth-child(1) {
